# anmutunes

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: actions.svelte.ts  app.html  defs.ts  state.svelte.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  vlc.def  vlc.exp  vlc.lib
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  db.rs  defs.rs  lib.rs  main.rs
src-tauri/src/db/: metadata.rs
src/components/: Select.svelte  Spaced.svelte  footer.svelte
src/components/Sortable/: Sortable.svelte  Track.svelte  Unsortable.svelte
src/components/Split/: CDs.svelte  Split.svelte  Track.svelte
src/components/Views/: Empty.svelte  Loading.svelte
src/components/header/: CenterContent.svelte  CtrlsLeft.svelte  CtrlsRight.svelte  Header.svelte  ViewSelect.svelte
src/components/overlays/: ColorEdit.svelte  ColorPicker.svelte  ContextMenu.svelte  Delete.svelte  Edit.svelte  EditAlbum.svelte  EditArtist.svelte  EditComposer.svelte  EditGenre.svelte  EditPlaylist.svelte  EditTrack.svelte  Error.svelte  Import.svelte  MediaPath.svelte  Modal.svelte  Notification.svelte  PlaylistSelect.svelte  Queue.svelte  Search.svelte  SearchResult.svelte  Settings.svelte  Tutorial.svelte
src/graphics/: anmutunes.svelte  max.svelte  min.svelte  notes.svelte  x.svelte
src/localisation/: localisation.svelte.ts
src/localisation/locales/: cs.json  da.json  de.json  (+13 more)
src/routes/: +page.svelte
static/: ATTRIBUTIONS.txt
(+16 files in other folders)
