[package]
name = "anmutunes"
version = "1.0.0"
description = "A music player and organizer app"
authors = ["Andreas (anmutech) Müller"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anmutunes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri = { version = "2.9.3", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.9.3", features = [] }

[dependencies]
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
vlc-rs = "0.3.0"
sqlite = "0.37.0"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
image = "0.25.8"
base64 = "0.22.1"
rand = "0.9.2"
quick-xml = "0.38.3"
urlencoding = "2.1.3"
regex = "1.12.2"
log = "0.4.28"
tauri-plugin-log = "2.7.1"
directories = "6.0.0"
tauri-plugin-os = "2.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-window-state = "2.4.1"
